src/assets/stylesheets/style.css
/* ... */
.fluid-web .fluid-web-community .fluid-web-community-list li a {
  margin: 5rem 0 1rem 0;
  width: 7rem;
  display: block;
  position: relative;
  color: #333;
  text-align: center;
  font-weight: bold;
  border: none;
}
.fluid-web .fluid-web-community .fluid-web-community-list li a:focus .fluid-web-community-icon:before,
.fluid-web .fluid-web-community .fluid-web-community-list li a:hover .fluid-web-community-icon:before {
  text-shadow: 0.01rem 0.01rem 0.1rem #afafaf;
}
.fluid-web .fluid-web-community .fluid-web-community-list .fluid-web-community-wiki:before {
  content: '\e602';
}
.fluid-web .fluid-web-community .fluid-web-community-list .fluid-web-community-irc:before {
  content: '\e604';
}
.fluid-web .fluid-web-community .fluid-web-community-list .fluid-web-community-presentations:before {
  content: '\e600';
}
.fluid-web .fluid-web-community .fluid-web-community-list .fluid-web-community-meetings:before {
  content: '\e606';
}
.fluid-web .fluid-web-community .fluid-web-community-list .fluid-web-community-source:before {
  content: '\e601';
}
.fluid-web .fluid-web-community .fluid-web-community-list .fluid-web-community-bugs:before {
  content: '\e605';
}
.fluid-web .fluid-web-community .fluid-web-community-list .fluid-web-community-mailinglist:before {
  content: '\e603';
}
.fluid-web .fluid-web-community .fluid-web-community-list li a:focus {
  outline: 0.2rem solid #fc0;
}
.fluid-web .fluid-web-community .fluid-web-community-list li a:focus,
.fluid-web .fluid-web-community .fluid-web-community-list li a:hover {
  color: #009fcb;
}
/* About Fluid */
.fluid-web .fluid-web-about p {
  position: relative;
  margin: 0 0 2rem 0rem;
}
.fluid-web .fluid-web-about .fluid-web-license {
  margin-bottom: 2rem;
  line-height: 1.2rem;
}
/* Projects */
.fluid-web .fluid-web-projects .fluid-web-link-nightly {
  font-style: italic;
  color: #333;
  border-bottom: 0.2rem solid #009fcb;
}
.fluid-web .fluid-web-projects .fluid-web-prefs-framework {
  background: url("/assets/images/floe-uio.jpg") no-repeat, #f0de00;
  background-size: 100% auto;
}
.fluid-web .fluid-web-projects .fluid-web-video-player {
  background: url("/assets/images/floe-videoplayer.jpg") no-repeat, #53a35e;
  background-size: 100% auto;
}
.fluid-web .fluid-web-projects .fluid-web-metadata-authoring {
  background: url("/assets/images/floe-metadata.jpg") no-repeat, #4ac39a;
  background-size: 100% auto;
}
.fluid-web .fluid-web-projects .fluid-web-projects-about-infusion .fluid-web-link-buttons {
  color: #fff;
  background: #009fcb;
  margin-bottom: 0.5rem;
}
.fluid-web .fluid-web-projects .fluid-web-projects-partners {
  font-style: italic;
}
/* Infusion */
.fluid-web .fluid-web-infusion h1 {
  font-size: 5rem;
  margin-top: -5rem;
  margin-bottom: 0;
  padding-left: 0.5625rem;
}
.fluid-web .fluid-web-infusion .infusion-mug {
  height: 10rem;
  width: 10rem;
  margin-top: -1rem;
  margin-bottom: -1rem;
  background: none !important;
}
/* News */
.fluid-web.fluid-web-news h1 {
  padding-left: 1.8rem;
}
.fluid-web .fluid-web-news-index {
  -webkit-column-count: 2;
  -moz-column-count: 2;
  column-count: 2;
}
.fluid-web .fluid-web-news-index.fluid-web-list {
  background: #f2f2f2;
}
/* Footer */
.fluid-web .fluid-web-footer {
  padding: 3rem;
  background-color: #363636;
  color: #fff;
}
.fluid-web .fluid-web-footer abbr {
  color: #fff;
}
.fluid-web .fluid-web-footer a {
  color: #fc0;
  border: none;
}
.fluid-web .fluid-web-footer a:hover {
  text-decoration: underline;
}
.fluid-web .fluid-web-footer a:active {
  background-color: #fc0;
  color: #363636;
}
.fluid-web .fluid-web-footer a:focus {
  outline: 0.2rem solid #fc0;
}
.fluid-web .fluid-web-footer p {
  font-size: 0.8rem;
  margin-bottom: 1.5rem;
}
.fluid-web .fluid-web-footer .fluid-web-projectCoordinator-list {
  font-size: 0.8rem;
}
.fluid-web .fluid-web-footer .fluid-web-projectCoordinator-list dt {
  margin-bottom: 0rem;
  display: inline;
}
.fl-prefsEditor-separatedPanel .fl-prefsEditor-showHide,
.fl-prefsEditor-separatedPanel .fl-prefsEditor-reset {
  margin-bottom: 0;
  height: inherit;
}
#spaceup
{
  margin-top: 50px;
}

